stylesheet.css
/* ... */
.crp-entry--info a {
    font-weight: bold;
}
.mestabs {
    padding: 10px;
    padding-top: 0;
}
.inputmes {
    padding: 4px;
    border: 1px solid #B9C4D1;
    border-radius: 2px;
    outline-color: #5d80a6;
    -webkit-appearance: button;
    font-size: 1rem;
    width: 100%;
}

.messenger-app--input {
    background: #f0f2f4;
    padding: 10px;
    width: 578px;
    border-top: 1px solid #dee5eb;
}
.messenger-app--input_fixed {
    position: fixed;
    bottom: 0;
}
.messenger-app {
    background: #fff;
    overflow-y: auto;
    height: 100%;
}
.messenger-app--messages---message {
    display: flex;
}
.messenger-app--messages---message .ava img {
    width: 55px;
    height: 55px;
    object-fit: cover;
    border-radius: 2px;
}
.messenger-app--messages---message .ava {
    height: 55px;
    object-fit: cover;
    border-radius: 2px;
}
.messenger-app--messages {
    padding: 10px;
}
._content {
    margin-left: 10px;
    padding-bottom: 10px;
}

.attachments_b .attachment .actions {
    display: none;
}
.attachments_b .attachment .post {
    padding-left: 30px;
    background-image: url(/themepack/mobile_ovk/0.0.1.0/resource/attachments_b.png);
    background-repeat: repeat-y;
}

.paginators {
    margin-top: 15px;
}
.paginators a {
    background: #f0f2f4;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 2px;
    padding-left: 11px;
    padding-right: 11px;
}
.paginators .active {
    background: #707070;
    color: #fff;
    font-weight: bold;
}
.no_comments_gray{
    padding: 5%;
    text-align: center;
    color: #777;
}


/* LEFT MENU ICONS (by DM) */

.mobile_icons{
    padding-left: 30px;
    background: url(/themepack/mobile_ovk/0.0.1.0/resource/menu_icons.png);
    background-repeat: no-repeat;
} /* Основа основ */


#fr{
    background-position: 0px -67px;
}

#ph{
    background-position: 0px -113px;
}

#mail{
    background-position: 0px -3px;
}

#news{
    background-position: 0px -26px;
}

#feedback{
    background-position: 0px -46px;
}

#grp{
    background-position: 0px -91px;
}

#settings{
    background-position: 0px -244px;
}

#search{
    background-position: 0px -135px;
}

#full{
    background-position: 0px -266px;
}

#exit{
    background-position: 0px -288px;
}

#music{
    background-position: 0px -198px;
}

#video{
    background-position: 0px -222px;
}

#hlp{
    background-position: 0px -332px;
}

.element.prmenu.gray a {
    font-size: 16px;
    font-weight: normal;
    color: #777;
}

.profile_menu_arrow{
    text-align: left;
    background-image:url('/themepack/mobvk/0.0.1.0/resource/arrow.png');
    background-color: transparent;
    position: absolute;
    right: 0px;
    width: 10px;
    height: 50px;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    margin-right: 3%;
}

.space_menu{
    padding: 5px;
    background-color: #f7f7f7;
}
.search_menu_box{
    display: none;
    position: absolute;
    padding:8px;
    font-weight:600;
    font-size:16px;
    /* background: #4f6d91; */
    z-index: 1337;
    right: 0;
    top: 0;
}
.search_menu_box.active{
    display: block;
}
input[type~="search"]{
    text-align: left;
    font-family: 'Lucida Grande', Verdana, Tahoma, Arial, sans-serif, 'Lucida Sans';
    font-size: 12px;
    box-shadow: none;
    vertical-align: top;
    min-width: 30px;
    box-sizing: content-box;
    border-radius: 6px 6px 6px 6px;
    background-color: #fff;
    margin: 0px;
    padding: 7px 24px 6px 28px;
    border: 2px solid #3b3b3b; 
}
.ovk_mobile_logo{
    background: url('/themepack/mobile_ovk/0.0.1.0/resource/logo.png');
    background-repeat: no-repeat;
    width: 24px;
    height: 24px;
}
.head_now{
    text-align: center;
    display: block;
    font-weight: bold;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    margin: -20px;
    cursor: default;
}

.head_now.active{
    display: none;
}

.rating.prmenu a {
    background: #fff;
    font-size: 16px;
}

.menu>.rating>a {
    display:block;
    padding:12px;
    font-weight:600;
    font-size:14px
}
.rating_st{
    text-align: left;
    position: relative;
    background-color: rgb(247, 247, 247);
    border-bottom-color: rgb(233, 233, 233);
    height: 8px;
    margin-top: 0px;
    border-width: medium medium 1px;
    border-style: none none solid;
}

.rating_st_icon{
    text-align:left;
    background-image: url('/themepack/mobile_ovk/0.0.1.0/resource/profile_arrow.gif');
    background-color: transparent;
    display:block;
    width: 15px;
    position: relative;
    top: 0;
    height: 8px;
    left: 5%;
    background-position: -45px 0px;
    background-repeat: no-repeat; 
}

.mobile_icons_rating{
    padding-left: 30px;
    background: url('/themepack/mobile_ovk/0.0.1.0/resource/menu_icons.png');
    background-repeat: no-repeat;
}

#interests{
    background-position: 0px -156px;
}

#tg{
    background-position: 0px -3px;
}

#st{
    background-position: 0px -26px;
}

#email{
    background-position: 0px -3px;
}

#phone{
    background-position: 0px -136px;
}









.post-content .attachments:first-of-type {
    margin-top: 8px;
}

.post-content .attachments_m .attachment {
    width: 98%;
}

.attachment .post {
    width: 102%;
}

.post-content .media {
    max-width: 100%;
    image-rendering: -webkit-optimize-contrast;
}

.post-content .media_makima {
    width: calc(100% - 4px);
    height: calc(100% - 4px);
    object-fit: cover;
}

.text-panel_auth{
    padding: 10px;
    background: #f7f7f7;
    color: #777;
}

.ovk_mobile_mail_icon {
    background: url("/themepack/mobile_ovk/0.0.1.0/resource/mail_ic.png");
    background-repeat: no-repeat;
    width: 24px;
    height: 24px;
    float: right;
    display: block;
}
.ovk_mobile_mail_icon b {
    background:#ABADAE;
    color:#fff;
    border-radius:3px;
    padding:3px;
    text-overflow:ellipsis;
    white-space:nowrap;
    overflow:hidden;
    max-width:28px;
    position:absolute;
    font-size:10px;
}
/* ... */

